--- a/Crowd_Funding_Platform/Views/ManageCampaigns/ShowCampaignCases.cshtml
+++ b/Crowd_Funding_Platform/Views/ManageCampaigns/ShowCampaignCases.cshtml
@@ -35,7 +35,7 @@
                                 <small class="text-muted">Created by: <strong>@campaign.Creator.FirstName</strong></small>
                             </div>
 
-                            <a href="@Url.Action("DetailCampaignCases", "Campaign", new { id = campaign.CampaignId })"
+                            <a href="@Url.Action("DetailCampaignCases", "ManageCampaigns", new { id = campaign.CampaignId })"
                                class="btn btn-primary mt-3 w-100">
                                 View Details
                             </a>
