--- a/Crowd_Funding_Platform/Views/ManageCampaigns/SaveCampaigns.cshtml
+++ b/Crowd_Funding_Platform/Views/ManageCampaigns/SaveCampaigns.cshtml
@@ -78,7 +78,7 @@
 
                     <div class="form-group">
                         <label for="Image">Campaign Image</label>
-                        <input type="file" id="Image" name="Image" class="form-control" accept="image/*" onchange="previewImage(event)" />
+                        <input type="file" id="MediaFile" name="ImageFile" class="form-control" accept="image/*" onchange="previewImage(event)" />
 
                         @if (!string.IsNullOrEmpty(Model?.MediaUrl))
                         {
