--- a/Crowd_Funding_Platform/Views/Campaign/ApplyForCreator.cshtml
+++ b/Crowd_Funding_Platform/Views/Campaign/ApplyForCreator.cshtml
@@ -17,7 +17,7 @@
         </div>
     </div>
 </div> *@
-@* 
+
 <div class="row">
     <div class="col-md-4">
         <form method="post" id="applyForCreatorForm" enctype="multipart/form-data" asp-action="ApplyForCreator" asp-controller="Campaign">
@@ -45,7 +45,7 @@
             </div>
         </form>
     </div>
-</div>  *@
+</div> 
 
 @* //old code *@
 
