--- a/Crowd_Funding_Platform/Views/Account/Registration.cshtml
+++ b/Crowd_Funding_Platform/Views/Account/Registration.cshtml
@@ -15,7 +15,7 @@
     <meta name="author" content="PIXINVENT">
     <title>Login Page - Frest - Bootstrap HTML admin template</title>
     <link rel="apple-touch-icon" href="~/Authentication_T/app-assets/images/ico/apple-icon-120.html">
-    <link rel="shortcut icon" type="image/x-icon" href="https://www.pixinvent.com/demo/frest-clean-bootstrap-admin-dashboard-template/~/Authentication_T/app-assets/images/ico/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="https://www.pixinvent.com/demo/frest-clean-bootstrap-admin-dashboard-template/Authentication_T/app-assets/images/ico/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,600%7CIBM+Plex+Sans:300,400,500,600,700" rel="stylesheet">
 
     <!-- BEGIN: Vendor CSS-->
