--- a/Crowd_Funding_Platform/Views/Campaign/ApplyForCreator.cshtml
+++ b/Crowd_Funding_Platform/Views/Campaign/ApplyForCreator.cshtml
@@ -49,7 +49,7 @@
 
 @* //old code *@
 
-<div class="row">
+@* <div class="row">
     <div class="col-md-4">
         <form method="post" id="applyForCreatorForm" enctype="multipart/form-data" asp-action="ApplyForCreator" asp-controller="Campaign">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -74,7 +74,7 @@
 
                 @* <input asp-for="ImageFile" class="form-control" id="documentFile" accept=".pdf, .jpg, .png" />
                 <small class="text-muted">Allowed formats: PDF, JPG, PNG</small> *@
-            </div>
+          @*  </div>
 
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -86,7 +86,7 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
+ *@
 @section Scripts {
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
